Fixed alignment issue with Skills card by removing flex centring.

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,8 +161,6 @@ section#intro .intro-text {
     width: 150px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .skills-card:hover {
